# techstock

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  README_API.md  README_SETUP.md  README_TAGS.md  README_WEB.md  run-postgres.sh
sql/: create_tables.sql  queries.sql
src/: lib.rs  main.rs
src/application/: dto.rs  mod.rs  services.rs
src/application/dto/: dashboard_dto.rs
src/application/use_cases/: application_use_cases.rs  dashboard_use_cases.rs  mod.rs  resource_group_use_cases.rs  resource_use_cases.rs  subscription_use_cases.rs
src/domain/: errors.rs  mod.rs  value_objects.rs
src/domain/entities/: application.rs  mod.rs  resource.rs  resource_group.rs  subscription.rs
src/domain/repositories/: application_repository.rs  mod.rs  resource_group_repository.rs  resource_repository.rs  subscription_repository.rs
src/infrastructure/: config.rs  database.rs  mod.rs
src/infrastructure/repositories/: mod.rs  postgres_application_repository.rs  postgres_resource_group_repository.rs  postgres_resource_repository.rs  postgres_subscription_repository.rs
src/presentation/: mod.rs  responses.rs  routes.rs
src/presentation/handlers/: dashboard_handler.rs  health_handler.rs  mod.rs  resource_group_handler.rs  resource_handler.rs  tags_handler.rs  (+1 more)
src/shared/: errors.rs  mod.rs  pagination.rs  validation.rs
static/: debug.html  index.html  test-simple.html
static/css/: enterprise-theme.css  searchable-dropdown.css  styles.css  tags-component.css
static/js/: api-client.js  app.js  connection-test.js  searchable-dropdown.js  tags-component.js
