[package]
name = "techstock"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "import"
path = "src/bin/import.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "json"] }
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
anyhow = "1.0"
pretty_env_logger = "0.5"
log = "0.4"